agregado comentario en nav

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <div class="raiz">
+      <!-- Esta es la barra de navegación, usala si deseas agregar Links -->
       <nav>
         <h1>CodiGO App</h1>
       </nav>
@@ -36,7 +37,6 @@
                   </div>
                 </div>
               </div> -->
-            
         </main>
       </div>
     </div>
@@ -66,13 +66,9 @@
 
       <div class="resumen">
         <table>
-          <tbody id="tbody-resumen">
-
-          </tbody>
+          <tbody id="tbody-resumen"></tbody>
         </table>
-        <button id="btn-pagar">
-          PAGAR ORDEN
-        </button>
+        <button id="btn-pagar">PAGAR ORDEN</button>
       </div>
     </div>
 
