--- a/index.html
+++ b/index.html
@@ -23,20 +23,18 @@
         <main id="contenido">
           <!-- aqui es donde irán nuestros productos-cards -->
           <!-- <div class="tarjeta">
-                <div class="imagen">
-                  <img src="https://picsum.photos/400">
-                </div>
-                <div class="texto">
-                  <h4>Ceviche</h4>
-                  <p>Lorem ipsum dolor sit amet consectetur.</p>
-                  <div class="precio">
-                    <span>S/ 30</span>
-                    <button class="btn-agregar">
-                      Agregar
-                    </button>
-                  </div>
-                </div>
-              </div> -->
+            <div class="imagen">
+              <img src="https://picsum.photos/400" />
+            </div>
+            <div class="texto">
+              <h4>Ceviche</h4>
+              <p>Lorem ipsum dolor sit amet consectetur.</p>
+              <div class="precio">
+                <span>S/ 30</span>
+                <button class="btn-agregar">Agregar</button>
+              </div>
+            </div>
+          </div> -->
         </main>
       </div>
     </div>
